src/static/styles/core.scss
/* ... */
.crystal-ball {
    pointer-events: all;
    position: relative;
    top: $ball-dip;
    height: 2 * $ball-radius;
    width: 2 * $ball-radius;
    margin: auto;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, .95);
    animation: glow 2s infinite linear;
    z-index: 1;

    .ball-title {
        width: 100%;
        font-size: 1.7em;
        position: absolute;
        bottom: $ball-dip + 1rem;
        text-align: center;
        color: orange;
        font-weight: bold;
    }
}

.big-wave {
    position: absolute;
    transform: translate(-50%, -50%);
    height: 2px;
    width: 2px;
    border-radius: 50%;
    background-color: rgba(136, 17, 51, .4);
    animation: 1.5s 1 big-wave;
    animation-fill-mode: forwards;
}

@keyframes big-wave {
    0% {
        box-shadow: 0 0 0 0 #fff;
        opacity: 1;
    }

    50% {
        opacity: 1;
    }

    100% {
        box-shadow: 0 0 0 100vh rgba(136, 17, 51, .4);
        opacity: 0;
    }
}

.events-nav {
    @extend %flat-list;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    height: 0;
    width: 0;
    margin: auto;

    > li {
        position: absolute;
        transform: translate(-50%, -50%);
    }
}

.events-nav-button {
    display: block;
    position: relative;
    height: 2em;
    width: 2em;
    color: orange;
    font-family: felicons;
    text-align: center;
    line-height: 2em;
    cursor: pointer;
}

.nav-cum-tooltip-dummy-target {
    pointer-events: none;
    position: fixed;
    z-index: 200;
}

.nav-cum-tooltip {
    position: absolute;
    bottom: calc(100% + 10px);
    margin-bottom: 10px;
    left: 50%;
    min-width: 150px;
    transform: translateX(-50%);
    background-color: #fff;
    white-space: nowrap;
    text-align: center;
    color: orange;
    border-radius: 5px;
    box-shadow: 0 0 2px #ccc;
    opacity: 0;
    transition: opacity 50ms, bottom 50ms;

    .triangle-back,
    .triangle-front {
        width: 0;
        height: 0;
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        z-index: 1;
    }

    .triangle-back {
        border-top: 10px solid #ccc;
        bottom: -10px;
    }

    .triangle-front {
        border-top: 9px solid #fff;
        bottom: -9px;
    }

    &.open {
        pointer-events: all;
    }

    .nav-title {
        padding: 10px 15px;
        z-index: 10;
        position: relative;
    }

    .fire1 {
        position: absolute;
        width: 100%;
        background-color: green;
        z-index: 2;
    }
}

.events-sub-nav {
    @extend %flat-list;
    height: 0;
    overflow-y: hidden;
    z-index: 10;
    position: relative;

    .open & {
        border-top: 1px solid #ccc;
    }

    li {
        a {
            display: block;
            padding: 10px;
            color: orange;
            position: relative;
            overflow: hidden;

            &:hover {
                background-color: #eee;
            }

            .wave {
                position: absolute;
                height: 1px;
                width: 1px;
                animation: .75s 1 wave;
                border-radius: 50%;
                animation-fill-mode: forwards;
            }
        }
    }
}

@keyframes wave {
    from {
        box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
        opacity: 1;
    }

    to {
        box-shadow: 0 0 0 200px rgba(0, 0, 0, 0);
        opacity: 0;
    }
}

article {
    padding-bottom: $ball-height;
}

.landing {
    position: relative;
    min-height: 100%;
    text-align: center;
    padding-top: 1em;
    color: #021a24;
    width: 100%;
    z-index: 1;

    .landing-content {
        display: inline-block;
        position: relative;
        z-index: 1;
    }

    .iiit-h {
        font-family: "Times new roman", serif;
        font-size: 2em;
        line-height: 1.25em;
        margin: 0;

        img {
            height: 1.25em;
            vertical-align: top;
        }
    }

    .presents {
        font-style: italic;
        line-height: 1.1em;
        margin-bottom: 2em;
    }

    .title {
        font-family: Flamenco, sans-serif;
        font-size: 6em;
        text-transform: lowercase;
        text-align: center;
        margin: 0;
        text-shadow: 0 0 0 #000;

        a {
            color: inherit;
        }
    }

    .year {
        font-family: Flamenco, sans-serif;
        font-size: 2em;
        text-align: right;
        font-weight: bold;
        margin-top: 0;
        text-shadow: 0 0 0 #000;
    }

    .tagline {
        font-family: Flamenco, sans-serif;
        font-size: 2.25em;
        text-align: center;
    }

    .dates {
        font-family: sans-serif;
        font-size: 1.2em;
    }

    @media (max-height: 36em) {
        .year,
        .tagline {
            margin: 0;
        }
    }

    @media (max-height: 31em) {
        .iiit-h,
        .presents {
            display: inline-block;
        }
    }

    .iiit-h,
    .presents,
    .tagline,
    .dates {
        transition: font-size $page-open-animation-timeout;
    }

    .title,
    .year {
        transition: font-size $page-open-animation-timeout, color $page-open-animation-timeout, text-shadow $page-open-animation-timeout;
    }

    .page-open & {
        font-size: .5em;

        .title,
        .year {
            color: white;
            text-shadow: 0 0 2px #000;
        }

        .iiit-h,
        .presents,
        .tagline,
        .dates {
            font-size: 0;
        }
    }
}
/* ... */

